--- a/aboutUs.html
+++ b/aboutUs.html
@@ -86,7 +86,8 @@
       <a href="index.html" class="button">Home</a>
       <button class="button">About Us</button>
       <a href="projectDetails.html" class="button">Project Details</a>
-      <a href="products.html" class="button">Download</a>
+      <a href="https://github.com/sirivanbiscuit/qhacks-2024" class="button">Download</a>
+
 
     </div>
   </header>
