--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <button class="button">Home</button>
       <a href="aboutUs.html" class="button">About Us</a>
       <a href="projectDetails.html" class="button">Project Details</a>
-      <a href="products.html" class="button">Download</a>
+      <a href="https://github.com/sirivanbiscuit/qhacks-2024" class="button">Download</a>
     </div>
   </header>
 
