--- a/products.html
+++ b/products.html
@@ -88,7 +88,8 @@
       <a href="index.html" class="button">Home</a>
       <a href="aboutUs.html" class="button">About Us</a>
       <a href="projectDetails.html" class="button">Project Details</a>
-      <button class="button">Download</button>
+      <a href="https://github.com/sirivanbiscuit/qhacks-2024" class="button">Download</a>
+
     </div>
   </header>
 
