--- a/projectDetails.html
+++ b/projectDetails.html
@@ -87,7 +87,8 @@
       <a href="index.html" class="button">Home</a>
       <a href="aboutUs.html" class="button">About Us</a>
       <button class="button">Project Details</button>
-      <a href="products.html" class="button">Download</a>
+      <a href="https://github.com/sirivanbiscuit/qhacks-2024" class="button">Download</a>
+
     </div>
   </header>
 
